fix the cropping of large images

--- a/Mobileka/L3/Engine/public/admin/css/admin.css
+++ b/Mobileka/L3/Engine/public/admin/css/admin.css
@@ -209,6 +209,6 @@ input.no-mb {
 .iframe-buttons {
 	margin-top: 20px;
 }
-.image-edit-thumbnail {
+.thumbnail > img.image-edit-thumbnail {
 	max-width: 500px;
 }
